# classifier_automatiquement_des_biens_de_consomation

./: Marivat_David_4_script_Python_052025.ipynb  README.md  Untitled.ipynb  ari_results.csv  mesFonctions.py  produits_champagne.csv  pyproject.toml  resultats_kmeans.csv
