[project]
name = "classifier-automatiquement-des-biens-de-consommation"
version = "0.1.0"
description = ""
authors = [
    {name = "david",email = "david.marivat-larose@orange.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=1.24,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "tensorflow-hub (>=0.16.1,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
